# Robotics-Mapping-and-Path-Planing

NewRobot/: odometry_log.csv  platformio.ini
NewRobot/include/: battery.h  config.h  encoder.h  line_tracking.h  motor.h  serial_proto.h
NewRobot/ros2_esp_bridge/: README.md  package.xml  setup.cfg  setup.py  test_odometry.py
NewRobot/ros2_esp_bridge/launch/: esp_with_lidar.launch.py
NewRobot/ros2_esp_bridge/ros2_esp_bridge/: a_star_planner.py  binary_map_creator.py  esp_serial_bridge.py  localization_comparison.py  rectangle_path.py
NewRobot/src/: battery.cpp  encoder.cpp  line_tracking.cpp  main.cpp  motor.cpp  serial_proto.cpp
