<?xml version="1.0"?>
<package format="3">
  <name>ros2_esp_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble serial bridge to an ESP32 robot over UART (USB). Publishes encoder and line sensor data; accepts simple commands.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <exec_depend>python3-serial</exec_depend>
</package>
